--- a/SPHFluidSimulation/SPHFluidSimulation.vcxproj
+++ b/SPHFluidSimulation/SPHFluidSimulation.vcxproj
@@ -138,7 +138,7 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
       <Outputs>$(ProjectDir)source\SPH\Kernels\Kernels.cpp; $(ProjectDir)source\SPH\Graphics\Shaders\Shaders.cpp</Outputs>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\partialSum.cl;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
+      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
     </CustomBuildStep>
     <PostBuildEvent>
       <Command />
@@ -180,7 +180,7 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
       <Outputs>$(ProjectDir)source\SPH\Kernels\Kernels.cpp; $(ProjectDir)source\SPH\Graphics\Shaders\Shaders.cpp</Outputs>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\partialSum.cl;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
+      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
     </CustomBuildStep>
     <PostBuildEvent>
       <Command />
@@ -218,7 +218,7 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
       <Outputs>$(ProjectDir)source\SPH\Kernels\Kernels.cpp; $(ProjectDir)source\SPH\Graphics\Shaders\Shaders.cpp</Outputs>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\partialSum.cl;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
+      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
     </CustomBuildStep>
     <PostBuildEvent>
       <Command />
@@ -260,13 +260,14 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
       <Outputs>$(ProjectDir)source\SPH\Kernels\Kernels.cpp; $(ProjectDir)source\SPH\Graphics\Shaders\Shaders.cpp</Outputs>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\partialSum.cl;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
+      <Inputs>$(ProjectDir)source\SPH\Kernels\Kernels_template.cpp;$(ProjectDir)source\SPH\Kernels\CompatibilityHeaderOpenCL.cl;$(ProjectDir)source\SPH\Kernels\SPHFunctions.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\Shaders_template.cpp;$(ProjectDir)source\SPH\Graphics\Shaders\particle.frag;$(ProjectDir)source\SPH\Graphics\Shaders\particle.vert;%(Inputs)</Inputs>
     </CustomBuildStep>
     <PostBuildEvent>
       <Command />
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\OpenCLContext.cpp" />
     <ClCompile Include="source\OpenCLDebug.cpp" />
     <ClCompile Include="source\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -310,13 +311,14 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClCompile Include="source\SPH\ThreadPool.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\OpenCLTemplatedKernel.h" />
     <ClInclude Include="include\SPH\Graphics\SystemRenderer.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\CPUResourceLock.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\OfflineCPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\OfflineGPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\OpenCLResourceLock.h" />
     <ClInclude Include="include\SPH\Core\ParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\Core\ParticleBufferManagerRenderData.h" />
+    <ClInclude Include="include\SPH\Core\ParticleBufferManagerGL.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\RenderableCPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\RenderableGPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\Core\ResourceLockGuard.h" />
@@ -324,6 +326,7 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClInclude Include="include\SPH\ParticleSetBlueprint\FilledBoxParticleSetBlueprint.h" />
     <ClInclude Include="include\SPH\Core\ParticleSetBlueprint.h" />
     <ClInclude Include="include\SPH\Core\Particles.h" />
+    <ClInclude Include="include\OpenCLContext.h" />
     <ClInclude Include="source\SPH\Graphics\Shaders\Shaders.h" />
     <ClInclude Include="source\SPH\Kernels\CompatibilityHeaderC++.h" />
     <ClInclude Include="source\SPH\Kernels\CompatibilityHeaderOpenCL.cl" />
@@ -335,7 +338,7 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClInclude Include="include\SPH\ThreadParallelTaskManager.h" />
     <ClInclude Include="source\json.hpp" />
     <ClInclude Include="source\JSONParsing.h" />
-    <ClInclude Include="source\OpenCLDebug.h" />
+    <ClInclude Include="include\OpenCLDebug.h" />
     <ClInclude Include="source\pch.h" />
     <ClInclude Include="source\SPH\Kernels\Kernels.h" />
     <ClInclude Include="include\SPH\ThreadPool.h" />
@@ -344,7 +347,6 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <None Include="BlazeEngineProjectPropertySheet.props" />
     <None Include="source\SPH\Graphics\Shaders\particle.frag" />
     <None Include="source\SPH\Graphics\Shaders\particle.vert" />
-    <None Include="source\SPH\Kernels\partialSum.cl" />
     <None Include="vcpkg.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
