--- a/SPHFluidSimulation/SPHFluidSimulation.vcxproj
+++ b/SPHFluidSimulation/SPHFluidSimulation.vcxproj
@@ -294,36 +294,36 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="source\SPH\ParticleBufferManager\CPUResourceLock.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\OfflineCPUParticleBufferManager.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\OfflineGPUParticleBufferManager.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\OpenCLResourceLock.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\RenderableCPUParticleBufferManager.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\RenderableGPUParticleBufferManager.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\CPUResourceLock.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\OfflineCPUParticleBufferManager.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\OfflineGPUParticleBufferManager.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\OpenCLResourceLock.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\RenderableCPUParticleBufferManager.cpp" />
+    <ClCompile Include="source\SPH\ParticleBufferManagers\RenderableGPUParticleBufferManager.cpp" />
     <ClCompile Include="source\SPH\Core\ResourceLockGuard.cpp" />
-    <ClCompile Include="source\SPH\ParticleSetBlueprint\BoxShellParticleSetBlueprint.cpp" />
-    <ClCompile Include="source\SPH\ParticleSetBlueprint\FilledBoxParticleSetBlueprint.cpp" />
+    <ClCompile Include="source\SPH\ParticleSetBlueprints\BoxShellParticleSetBlueprint.cpp" />
+    <ClCompile Include="source\SPH\ParticleSetBlueprints\FilledBoxParticleSetBlueprint.cpp" />
     <ClCompile Include="source\SPH\Core\SceneBlueprint.cpp" />
     <ClCompile Include="source\SPH\Core\ParticleSimulationEngine.cpp" />
-    <ClCompile Include="source\SPH\System\SystemCPU.cpp" />
-    <ClCompile Include="source\SPH\System\SystemGPU.cpp" />
+    <ClCompile Include="source\SPH\SimulationEngines\SimulationEngineCPU.cpp" />
+    <ClCompile Include="source\SPH\SimulationEngines\SimulationEngineGPU.cpp" />
     <ClCompile Include="source\SPH\ThreadParallelTaskManager.cpp" />
     <ClCompile Include="source\SPH\ThreadPool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\OpenCLTemplatedKernel.h" />
     <ClInclude Include="include\SPH\Graphics\ParticleRenderer.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\CPUResourceLock.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\OfflineCPUParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\OfflineGPUParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\OpenCLResourceLock.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\CPUResourceLock.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\OfflineCPUParticleBufferManager.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\OfflineGPUParticleBufferManager.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\OpenCLResourceLock.h" />
     <ClInclude Include="include\SPH\Core\ParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\ParticleBufferManagerGL.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\RenderableCPUParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\RenderableGPUParticleBufferManager.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\ParticleBufferManagerGL.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\RenderableCPUParticleBufferManager.h" />
+    <ClInclude Include="include\SPH\ParticleBufferManagers\RenderableGPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\Core\ResourceLockGuard.h" />
-    <ClInclude Include="include\SPH\ParticleSetBlueprint\BoxShellParticleSetBlueprint.h" />
-    <ClInclude Include="include\SPH\ParticleSetBlueprint\FilledBoxParticleSetBlueprint.h" />
+    <ClInclude Include="include\SPH\ParticleSetBlueprints\BoxShellParticleSetBlueprint.h" />
+    <ClInclude Include="include\SPH\ParticleSetBlueprints\FilledBoxParticleSetBlueprint.h" />
     <ClInclude Include="include\SPH\Core\ParticleSetBlueprint.h" />
     <ClInclude Include="include\SPH\Core\Particles.h" />
     <ClInclude Include="include\OpenCLContext.h" />
@@ -332,9 +332,9 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClInclude Include="source\SPH\Kernels\CompatibilityHeaderOpenCL.cl" />
     <ClInclude Include="source\SPH\Kernels\SPHFunctions.h" />
     <ClInclude Include="include\SPH\Core\SceneBlueprint.h" />
-    <ClInclude Include="include\SPH\Core\ParticleSimulationEngine.h" />
-    <ClInclude Include="include\SPH\System\SystemCPU.h" />
-    <ClInclude Include="include\SPH\System\SystemGPU.h" />
+    <ClInclude Include="include\SPH\Core\SimulationEngine.h" />
+    <ClInclude Include="include\SPH\SimulationEngines\SimulationEngineCPU.h" />
+    <ClInclude Include="include\SPH\SimulationEngines\SimulationEngineGPU.h" />
     <ClInclude Include="include\SPH\ThreadParallelTaskManager.h" />
     <ClInclude Include="source\json.hpp" />
     <ClInclude Include="source\JSONParsing.h" />
