--- a/SPHFluidSimulation/SPHFluidSimulation.vcxproj.filters
+++ b/SPHFluidSimulation/SPHFluidSimulation.vcxproj.filters
@@ -36,10 +36,10 @@
     <ClCompile Include="source\SPH\SimulationEngines\SimulationEngineGPU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\SPH\ThreadPool.cpp">
+    <ClCompile Include="source\SPH\Concurrency\ThreadPool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\OpenCLDebug.cpp">
+    <ClCompile Include="source\SPH\OpenCL\OpenCLDebug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\SPH\Core\SceneBlueprint.cpp">
@@ -57,7 +57,7 @@
     <ClCompile Include="source\SPH\Core\ResourceLockGuard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\SPH\ThreadParallelTaskManager.cpp">
+    <ClCompile Include="source\SPH\Concurrency\ThreadParallelTaskManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\pch.cpp">
@@ -78,18 +78,21 @@
     <ClCompile Include="source\SPH\Kernels\Kernels.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\OpenCLContext.cpp">
+    <ClCompile Include="source\SPH\OpenCL\OpenCLContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\SPH\SimulationEngines\SimulationEngineGPUKernels.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\json.hpp">
+    <ClInclude Include="source\external\json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\JSONParsing.h">
+    <ClInclude Include="source\SPH\Utility\JSONParsing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\SPH\ThreadPool.h">
+    <ClInclude Include="include\SPH\Concurrency\ThreadPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\SPH\Graphics\ParticleRenderer.h">
@@ -137,7 +140,7 @@
     <ClInclude Include="source\SPH\Kernels\Kernels.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\OpenCLDebug.h">
+    <ClInclude Include="source\SPH\OpenCL\OpenCLDebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\SPH\Core\SceneBlueprint.h">
@@ -149,7 +152,7 @@
     <ClInclude Include="include\SPH\Core\ResourceLockGuard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\SPH\ThreadParallelTaskManager.h">
+    <ClInclude Include="include\SPH\Concurrency\ThreadParallelTaskManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\pch.h">
@@ -170,10 +173,16 @@
     <ClInclude Include="source\SPH\Graphics\Shaders\Shaders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\OpenCLContext.h">
+    <ClInclude Include="include\SPH\OpenCL\OpenCLContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\OpenCLTemplatedKernel.h">
+    <ClInclude Include="include\SPH\SimulationEngines\SimulationEngineGPUKernels.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\SPH\OpenCL\PerformanceProfile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\SPH\OpenCL\EventWaitArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
